feat: add automatic online behavior evaluation
